# discord-bot-docker-example

./: .dockerignore  Dockerfile  LICENSE.txt  README.md  discord-bot.py  pyproject.toml
