[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 65.5",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "discord-bot"
version = "1.1.1"
description = ""
authors = [
    "Beff Jezos <beff@jamazon.crom>"
]
license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
"discord.py" = ">=2.0,<2.1"
